--- a/src/index.scss
+++ b/src/index.scss
@@ -14,4 +14,4 @@
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
-@import "~bootstrap/scss/card";
+@import "~bootstrap/scss/tables";
