Feature: add a filter by ship type, add a segmented control for the viewing mode; add a loading indicator

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,4 +14,6 @@
 @import "~bootstrap/scss/grid";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
+@import "~bootstrap/scss/button-group";
 @import "~bootstrap/scss/tables";
+@import "~bootstrap/scss/spinners";
