--- a/src/index.scss
+++ b/src/index.scss
@@ -16,4 +16,5 @@
 @import "~bootstrap/scss/buttons";
 @import "~bootstrap/scss/button-group";
 @import "~bootstrap/scss/tables";
+@import "~bootstrap/scss/card";
 @import "~bootstrap/scss/spinners";
